[gd_scene load_steps=14 format=3 uid="uid://c8xhmsicg8x6q"]

[ext_resource type="Texture2D" uid="uid://dyrdbhbxp2e7x" path="res://assets/shoot.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dcgk416cuol8g" path="res://assets/reticle.png" id="2"]
[ext_resource type="Script" path="res://src/Player.gd" id="3"]
[ext_resource type="FontFile" uid="uid://bfnrupvkqq45c" path="res://assets/dpcomic-crowned/dpcomic-crowned.ttf" id="4"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ac6d3"]
height = 2.5
radius = 2.0

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/Control/Right:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}

[sub_resource type="Animation" id="4"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/Control/Right:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="5"]
resource_name = "reload"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/Control/Right:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 2, 0]
}

[sub_resource type="Animation" id="3"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer/Control/Right:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g4njv"]
_data = {
"RESET": SubResource("2"),
"idle": SubResource("4"),
"reload": SubResource("5"),
"shoot": SubResource("3")
}

[sub_resource type="FontFile" id="6"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="7"]
default_font = SubResource("6")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("1")

[node name="PunchRange" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PunchRange"]
shape = SubResource("CylinderShape3D_ac6d3")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2000)

[node name="Camera3D" type="Camera3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape3D")
libraries = {
"": SubResource("AnimationLibrary_g4njv")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Right" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(250, -256)
texture = ExtResource("1")
hframes = 4
frame = 1

[node name="Left" type="Sprite2D" parent="CanvasLayer/Control"]
visible = false
position = Vector2(-250, -256)
texture = ExtResource("1")
flip_h = true
hframes = 4
frame = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
texture = ExtResource("2")

[node name="AmmoLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -216.0
offset_right = 108.0
offset_bottom = 216.0
theme = SubResource("7")
text = "6"

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AmmoLabelTimer" type="Timer" parent="."]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="AmmoLabelTimer" to="." method="_on_AmmoLabelTimer_timeout"]
